[tool.poetry]
name = "tcbon"
version = "0.1.0"
description = "There can be only one! A Utility to keep only one instance of your python application alive."
authors = ["Dan Bradham <danielbradham@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7,^3.6"
appdirs = "^1.4.3"
flask = "^1.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
